mobile spacing fixes

--- a/docs/site.css
+++ b/docs/site.css
@@ -89,12 +89,12 @@ h2 a {
 
 h3 {
 	font-size: 1.2rem;
-	margin: 15px 0 5px;
+	margin: 10px 0 5px;
 }
 
 h4 {
 	font-size: 1.1rem;
-	margin: 15px 0 5px;
+	margin: 10px 0 5px;
 }
 
 a, a:visited {
@@ -120,7 +120,7 @@ img {
 }
 
 p {
-	margin: 0 0 15px;
+	margin: 0 0 5px;
 }
 
 p:last-child {
@@ -188,7 +188,7 @@ p.next {
 
 pre {
 	background: #282828;
-	padding: 10px 10px 30px 10px;
+	padding: 5px 5px 25px;
 	margin: 0 0 10px;
 	overflow-x: auto;
 	line-height: 1.2;
@@ -211,12 +211,12 @@ pre::after {
 	content: "utf-8[unix]";
 	display: block;
 	background: #222;
-	font-size: 0.9rem;
+	font-size: 0.8rem;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	position: absolute;
-	padding: 5px 10px;
+	padding: 5px;
 	text-align: right;
 	color: #AAA;
 }
@@ -256,7 +256,7 @@ pre code .y {
 
 code {
 	font-family: Monospace;
-	font-size: 0.9rem;
+	font-size: 0.8rem;
 	font-weight: bold;
 	line-height: 1;
 }
@@ -280,6 +280,18 @@ pre code {
 
 	h3 {
 		font-size: 1.4rem;
+	}
+
+	pre {
+		padding: 10px 10px 30px;
+	}
+
+	pre::after,	code {
+		font-size: 0.9rem;
+	}
+
+	pre::after {
+		padding: 5px 10px;
 	}
 }
 
